# sisifo

./: PROMPTS.md  README.md  pyproject.toml  tox.toml
src/sisifo/: __init__.py  __main__.py  cli.py  config.py  decisions.py  github_client.py  reconciler.py
tests/: sisifo.json5
tests/unit/: test_config.py  test_reconciler.py
